--- a/web_repl/Cargo.toml
+++ b/web_repl/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
+md_parser = { path = "../md_parser" }
 
 [dev-dependencies]
