--- a/web_repl/Cargo.toml
+++ b/web_repl/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [dependencies]
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 md_parser = { path = "../md_parser" }
-
-[dev-dependencies]
+wasm-bindgen = "0.2"
+web-sys = "0.3.69"
