--- a/.github/workflows/deploy_web.yml
+++ b/.github/workflows/deploy_web.yml
@@ -21,6 +21,9 @@ jobs:
           toolchain: stable
           targets: wasm32-unknown-unknown
 
+      - uses: Swatinem/rust-cache@v2
+        name: Rust cache
+
       - name: Install Trunk
         run: cargo install trunk
 
